--- a/sass/guide.scss
+++ b/sass/guide.scss
@@ -1,5 +1,6 @@
 @import 'base/_reset.scss';
 @import 'base/_var.scss';
+@import 'base/_font.scss';
 @import 'base/_boxsizing.scss';
 @import 'mixins/_afterClear.scss';
 @import 'base/_font.scss';
