--- a/sass/halfway_house_detail.scss
+++ b/sass/halfway_house_detail.scss
@@ -11,6 +11,7 @@
 @import 'modules/_header.scss';
 @import 'modules/_footer.scss';
 @import 'modules/_btns.scss';
+@import 'modules/_signIn.scss';
 @import 'modules/_halfway_house_detail.scss';
 @import 'respond/_halfwayHouseDetailMedium.scss';
 @import 'respond/_halfwayHouseDetailSmall.scss';
