--- a/sass/modules/_halfMem.scss
+++ b/sass/modules/_halfMem.scss
@@ -2,7 +2,7 @@
 .right {
     margin-left: 200px;
     @include afterClear;
-    background-image: url(../../images/marble.jpg);
+    background-image: url(../images/marble.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     .bigImg {
