--- a/css/catSearch.css
+++ b/css/catSearch.css
@@ -828,7 +828,7 @@ body {
 }
 
 .right .container1 .selectForm #advanced:checked ~ div {
-  height: 400px;
+  height: 280px;
 }
 
 .right .container1 .selectForm .advanceSearchItem {
@@ -866,6 +866,7 @@ body {
   font-size: 14px;
   text-indent: 4px;
   margin-right: 6px;
+  padding-left: 5px;
 }
 
 .right .container1 .selectForm .formInsert .searchBar:focus {
@@ -936,19 +937,17 @@ body {
   display: none;
 }
 
+.right .container1 #sortCat {
+  border: solid #333 1px;
+  background-color: #fffffb;
+  text-align: center;
+  position: absolute;
+}
+
 .right .container1 .catPic {
   width: 100%;
   margin: 60px auto 0;
   position: relative;
-}
-
-.right .container1 .catPic #sortCat {
-  position: absolute;
-  top: -46px;
-  left: 30px;
-  border: solid #333 1px;
-  background-color: #fffffb;
-  text-align: center;
 }
 
 .right .container1 .catPic .catItem {
@@ -1053,12 +1052,11 @@ body {
   margin-left: -10px;
 }
 
-.right .container1 .page {
-  padding: 5px;
+.right .container1 .catPic .page {
   text-align: center;
 }
 
-.right .container1 .page .pageNo {
+.right .container1 .catPic .page .pageNo {
   border-width: 1px;
   border-radius: 0px;
   padding: 2px;
@@ -1067,6 +1065,8 @@ body {
   line-height: 1.5em;
   display: inline-block;
   text-align: center;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 @media all and (max-width: 991px) {
@@ -1126,7 +1126,7 @@ body {
     right: 5%;
   }
   .right .container1 .selectForm #advanced:checked ~ div {
-    height: 710px;
+    height: 500px;
   }
   .right .container1 .selectForm .advanceSearchItem {
     padding-left: 20px;
