--- a/sass/modules/_catSearch.scss
+++ b/sass/modules/_catSearch.scss
@@ -82,7 +82,7 @@ body {
                 }
                 &:checked~div {
                     // display: block;
-                    height: 400px;
+                    height: 280px;
                 }
             }
             .advanceSearchItem {
@@ -114,6 +114,7 @@ body {
                     font-size: $font-size-base;
                     text-indent: 4px;
                     margin-right: 6px;
+                    padding-left: 5px;
                     &:focus {
                         outline: none;
                     }
@@ -175,18 +176,16 @@ body {
                 }
             }
         }
+        #sortCat {
+            border: solid #333 1px;
+            background-color: #fffffb;
+            text-align: center;
+            position: absolute;
+        }
         .catPic {
             width: 100%;
             margin: 60px auto 0;
             position: relative;
-            #sortCat {
-                position: absolute;
-                top: -46px;
-                left: 30px;
-                border: solid #333 1px;
-                background-color: #fffffb;
-                text-align: center;
-            }
             .catItem {
                 width: 300px;
                 background-size: 100%;
@@ -279,19 +278,20 @@ body {
                     }
                 }
             }
-        }
-        .page {
-            padding: 5px;
-            text-align: center;
-            .pageNo {
-                border-width: 1px;
-                border-radius: 0px;
-                padding: 2px;
-                padding-left: 5px;
-                width: 20px;
-                line-height: 1.5em;
-                display: inline-block;
+            .page {
                 text-align: center;
+                .pageNo {
+                    border-width: 1px;
+                    border-radius: 0px;
+                    padding: 2px;
+                    padding-left: 5px;
+                    width: 20px;
+                    line-height: 1.5em;
+                    display: inline-block;
+                    text-align: center;
+                    margin-left: 5px;
+                    margin-right: 5px;
+                }
             }
         }
     }
