--- a/css/member.css
+++ b/css/member.css
@@ -574,15 +574,25 @@ header ul li:nth-child(5):after {
   cursor: pointer;
   letter-spacing: 3px;
   padding: 2% 8% 2% 10%;
-  border: 1px solid #333333;
-  background-color: transparent;
-  color: #333;
-}
-
-.right .content .memOrderlist table td button:hover {
   background-color: #EAAF88;
   border: 1px solid #EAAF88;
   color: #fff;
+  outline: none;
+}
+
+.right .content .memOrderlist table td button:hover {
+  border: 1px solid #EAAF88;
+  background-color: transparent;
+  color: #EAAF88;
+}
+
+.right .content .memOrderlist .odTable a {
+  text-decoration: none;
+  color: #EAAF88;
+}
+
+.right .content .memOrderlist .odTable a:hover {
+  color: #0f71c2;
 }
 
 @media all and (max-width: 991px) {
