--- a/sass/respond/_catSearchMedium.scss
+++ b/sass/respond/_catSearchMedium.scss
@@ -6,6 +6,10 @@
                 width: 100%;
                 margin: 0;
                 .container1 {
+                    #quickViewArea{
+                        height: 540px;
+                        width: 360px;
+                    }
                     .selectForm {
                         .advanceSearch {
                             right: 14%
