--- a/css/catSearch.css
+++ b/css/catSearch.css
@@ -743,6 +743,32 @@ body {
   margin-bottom: 40px;
 }
 
+.right .container1 #black {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.right .container1 #quickViewArea {
+  position: fixed;
+  height: 600px;
+  width: 450px;
+  z-index: 1001;
+  display: none;
+  box-sizing: border-box;
+  border: 10px solid #fff;
+}
+
+.right .container1 #quickViewArea img {
+  width: 100%;
+  height: 100%;
+}
+
 .right .container1 a {
   text-decoration: none;
 }
@@ -1077,6 +1103,10 @@ body {
     width: 100%;
     margin: 0;
   }
+  .right .container1 #quickViewArea {
+    height: 540px;
+    width: 360px;
+  }
   .right .container1 .selectForm .advanceSearch {
     right: 14%;
   }
@@ -1108,6 +1138,10 @@ body {
   .right {
     width: 100%;
     margin: 0;
+  }
+  .right .container1 #quickViewArea {
+    height: 400px;
+    width: 300px;
   }
   .right .container1 .selectForm {
     width: 100%;
