--- a/sass/modules/_catSearch.scss
+++ b/sass/modules/_catSearch.scss
@@ -11,6 +11,29 @@ body {
         position: relative;
         padding-top: 40px;
         margin-bottom: 40px;
+        #black{
+            width: 100vw;
+            height: 100vh;
+            position: fixed;
+            z-index: 1000;
+            top: 0;
+            left: 0;
+            display: none;
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+        #quickViewArea{
+            position: fixed;
+            height: 600px;
+            width: 450px;
+            z-index: 1001;
+            display: none;
+            box-sizing: border-box;
+            border:10px solid #fff;
+            img{
+                width: 100%;
+                height: 100%;
+            }
+        }
         a {
             text-decoration: none;
         }
