--- a/sass/respond/_catSearchSmall.scss
+++ b/sass/respond/_catSearchSmall.scss
@@ -6,6 +6,10 @@
         width: 100%;
         margin: 0;
         .container1 {
+            #quickViewArea {
+                height: 400px;
+                width: 300px;
+            }
             .selectForm {
                 width: 100%;
                 .formInsert {
@@ -27,7 +31,7 @@
                 .advanceSearchItem {
                     padding-left: 20px;
                     padding-right: 20px;
-                    .selectTitle{
+                    .selectTitle {
                         display: block;
                         margin-top: 20px;
                     }
@@ -35,7 +39,7 @@
                         padding: 3px 8px;
                         margin: 4px 2px;
                     }
-                    .forRWD{
+                    .forRWD {
                         display: block;
                     }
                 }
