--- a/sass/modules/_halfMem.scss
+++ b/sass/modules/_halfMem.scss
@@ -58,7 +58,7 @@
             border-radius: 60px;
             cursor: pointer;
             letter-spacing: 3px;
-            padding: 2% 8% 2% 10%;
+            padding: 2% 6%;
             background-color: #EAAF88;
             border: 1px solid #EAAF88;
             color: #fff;
@@ -75,7 +75,7 @@
         h4 {
             text-align: center;
             font-size: $font-size-h3;
-            margin-bottom: 30px;
+            margin: 30px 0;
         }
         .halfMemInfo {
             form {
@@ -107,6 +107,16 @@
             }
         }
         .halfMemCat {
+            .newbtn {
+                float: right;
+                margin-bottom: 20px;
+            }
+            .newEmpTROff {
+                display: none;
+            }
+            .newEmpTROn {
+                display: table-row;
+            }
             .catInfo {
                 width: 100%;
                 tr {
