--- a/css/halfMem.css
+++ b/css/halfMem.css
@@ -443,7 +443,7 @@ header ul li:nth-child(5):after {
 }
 
 .right .leftselect {
-  width: 25%;
+  width: 23%;
   float: left;
   margin-right: 30px;
 }
@@ -483,7 +483,7 @@ header ul li:nth-child(5):after {
 }
 
 .right .content {
-  width: 70%;
+  width: 73%;
   float: left;
   padding-bottom: 50px;
 }
@@ -645,18 +645,18 @@ header ul li:nth-child(5):after {
   padding: 10px 0;
 }
 
-.right .content .halfMemAdobtRecord form table {
+.right .content .halfMemAdobtRecord table {
   width: 100%;
 }
 
-.right .content .halfMemAdobtRecord form th {
+.right .content .halfMemAdobtRecord table th {
   text-align: center;
   background-color: #f2f2f2;
   border: 2px solid #ccc;
   padding: 15px;
 }
 
-.right .content .halfMemAdobtRecord form td {
+.right .content .halfMemAdobtRecord table td {
   border: 2px solid #ccc;
   padding: 20px;
   text-align: center;
@@ -679,16 +679,28 @@ header ul li:nth-child(5):after {
   text-align: center;
 }
 
-.right .content .halfMemAdopt form td .fa-circle-o {
-  font-size: 16.8px;
+.right .content .halfMemAdopt form td .circle {
   color: dodgerblue;
+}
+
+.right .content .halfMemAdopt form td .circle label {
   cursor: pointer;
 }
 
-.right .content .halfMemAdopt form td .fa-times {
+.right .content .halfMemAdopt form td .circle .fa-check-circle-o {
   font-size: 16.8px;
+}
+
+.right .content .halfMemAdopt form td .times {
   color: crimson;
+}
+
+.right .content .halfMemAdopt form td .times label {
   cursor: pointer;
+}
+
+.right .content .halfMemAdopt form td .times .fa-times-circle-o {
+  font-size: 16.8px;
 }
 
 .right .content .halfMemOrderlist {
