--- a/sass/modules/_halfMem.scss
+++ b/sass/modules/_halfMem.scss
@@ -19,7 +19,7 @@
         padding: 50px 0;
     }
     .leftselect {
-        width: 25%;
+        width: 23%;
         float: left;
         margin-right: 30px;
         img {
@@ -51,7 +51,7 @@
         display: none;
     }
     .content {
-        width: 70%;
+        width: 73%;
         float: left;
         padding-bottom: 50px;
         button {
@@ -186,10 +186,8 @@
             }
         }
         .halfMemAdobtRecord {
-            form {
-                table {
-                    width: 100%;
-                }
+            table {
+                width: 100%;
                 th {
                     text-align: center;
                     background-color: rgb(242, 242, 242);
@@ -218,15 +216,23 @@
                     border: 2px solid #ccc;
                     padding: 20px;
                     text-align: center;
-                    .fa-circle-o {
-                        font-size: $font-size-base*1.2;
+                    .circle {
                         color: dodgerblue;
-                        cursor: pointer;
+                        label{
+                            cursor: pointer;
+                        }
+                        .fa-check-circle-o {
+                            font-size: $font-size-base*1.2;
+                        }
                     }
-                    .fa-times {
-                        font-size: $font-size-base*1.2;
+                    .times {
                         color: crimson;
-                        cursor: pointer;
+                        label{
+                            cursor: pointer;
+                        }
+                        .fa-times-circle-o {
+                            font-size: $font-size-base*1.2;
+                        }
                     }
                 }
             }
