--- a/sass/modules/_catSearch.scss
+++ b/sass/modules/_catSearch.scss
@@ -29,6 +29,12 @@ body {
             display: none;
             box-sizing: border-box;
             border:10px solid #fff;
+            #cancelQkv{
+                position: absolute;
+                top: 4px;
+                right: 4px;
+                cursor: pointer;
+            }
             img{
                 width: 100%;
                 height: 100%;
