--- a/css/member.css
+++ b/css/member.css
@@ -61,6 +61,100 @@ body {
   letter-spacing: 3px;
 }
 
+.defaultBtn {
+  font-size: 16px;
+  border: #333 2px solid;
+  border-radius: 24px;
+  color: #333;
+  padding: 4px 30px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: .3s all;
+  outline: none;
+}
+
+.defaultBtn:hover {
+  color: white;
+  background-color: #EAAF88;
+  border-color: #EAAF88;
+}
+
+.btn-more {
+  width: 160px;
+  text-align: center;
+  height: 40px;
+  line-height: 40px;
+  background-color: #fff;
+  text-decoration: none;
+  color: #333;
+  position: relative;
+  overflow: hidden;
+  z-index: 2;
+  font-family: notoSans_r;
+}
+
+.btn-more:hover {
+  color: #fff;
+}
+
+.btn-more:before {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  content: '';
+  position: absolute;
+  left: -100%;
+  background-color: transparent;
+  transition: .3s;
+  z-index: -1;
+}
+
+.btn-more:hover:before {
+  left: 0;
+  background-color: #333;
+}
+
+.btn-more:after {
+  margin-top: -7px;
+  width: 7px;
+  height: 13px;
+  background: url(../images/icon01.png) no-repeat right center;
+  position: absolute;
+  top: 50%;
+  right: 18px;
+  content: "";
+}
+
+.breadcrumbs {
+  margin-bottom: 40px;
+  font-size: 18px;
+}
+
+.breadcrumbs a {
+  font-size: 14px;
+  text-decoration: none;
+  border-width: 1px;
+  padding: 4px 10px;
+  text-align: center;
+}
+
+@media all and (max-width: 767px) {
+  .breadcrumbs {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+  .breadcrumbs a {
+    border: none;
+    padding: 0;
+  }
+  .breadcrumbs a:hover {
+    color: #333;
+    background-color: transparent;
+    border-color: transparent;
+  }
+}
+
 .container {
   max-width: 991px;
   margin: 0 auto;
@@ -567,23 +661,6 @@ header ul li:nth-child(5):after {
   font-size: 16.8px;
   color: firebrick;
   cursor: pointer;
-}
-
-.right .content .memOrderlist table td button {
-  border-radius: 60px;
-  cursor: pointer;
-  letter-spacing: 3px;
-  padding: 2% 8% 2% 10%;
-  background-color: #EAAF88;
-  border: 1px solid #EAAF88;
-  color: #fff;
-  outline: none;
-}
-
-.right .content .memOrderlist table td button:hover {
-  border: 1px solid #EAAF88;
-  background-color: transparent;
-  color: #EAAF88;
 }
 
 .right .content .memOrderlist .odTable a {
