--- a/sass/backProduct.scss
+++ b/sass/backProduct.scss
@@ -2,10 +2,10 @@
 @import 'base/_var.scss';
 @import 'base/_boxsizing.scss';
 @import 'base/_font.scss';
+@import "base/_btn.scss";
 @import 'modules/_btns.scss';
-@import './modules/_backHeader.scss';
+@import 'modules/_backHeader.scss';
 @import 'mixins/_navNow.scss';
-@import "base/btn";
 @include navNow(8);
 .right {
     width: calc(100% - 200px);
@@ -38,15 +38,18 @@
                 margin-left: auto;
                 margin-right: 0;
             }
+            .newEmpTROff {
+                display: none;
+            }
+            .newEmpTROn {
+                display: table-row;
+            }
+            .newblock{
+                display: block;
+            }
             table {
                 width: 100%;
                 margin: 40px auto 60px;
-                .newEmpTROff {
-                    display: none;
-                }
-                .newEmpTROn {
-                    display: table-row;
-                }
                 tr {
                     border-bottom: 1px solid #333;
                     th,
@@ -64,28 +67,16 @@
                             color: dodgerblue;
                             cursor: pointer;
                         }
-                        input{
+                        input {
                             width: 50%;
                             margin: 8px 0;
                         }
-                        textarea{
+                        textarea {
                             resize: none;
                         }
                         button {
-                            border-radius: 60px;
-                            cursor: pointer;
-                            letter-spacing: 3px;
-                            padding: 1% 1.5%;
-                            background-color: #EAAF88;
-                            border: 1px solid #EAAF88;
-                            color: #fff;
-                            outline: none;
                             display: inline-block;
-                            &:hover {
-                                border: 1px solid #EAAF88;
-                                background-color: transparent;
-                                color: #EAAF88;
-                            }
+                            text-align: center;
                         }
                     }
                     th {
