--- a/sass/member.scss
+++ b/sass/member.scss
@@ -2,6 +2,7 @@
 @import 'base/_var.scss';
 @import 'base/_boxsizing.scss';
 @import 'base/_font.scss';
+@import "base/_btn.scss";
 @import 'layout/_container.scss';
 @import 'mixins/_afterClear.scss';
 @import 'mixins/_navNow.scss';
