--- a/sass/backHalfway.scss
+++ b/sass/backHalfway.scss
@@ -30,12 +30,9 @@
                 max-width: 1000px;
             }
         }
-        .adoptInfomation {
+        .halfArea {
             width: 80%;
             margin: 100px auto 100px;
-            select {
-                display: block;
-            }
             table {
                 width: 100%;
                 margin: 40px auto 60px;
@@ -61,12 +58,19 @@
                             color: crimson;
                             cursor: pointer;
                         }
+                        input{
+                            width: 80%;
+                            padding-left: 10px;
+                        }
                     }
                     th {
                         font-size: $font-size-large;
                         letter-spacing: 2px;
                         font-weight: bold;
                     }
+                }
+                tr.last{
+                    border-bottom: 0px solid #000;
                 }
             }
             a {
