--- a/css/halfway_house_detail.css
+++ b/css/halfway_house_detail.css
@@ -146,6 +146,21 @@ body {
   text-align: center;
 }
 
+.page {
+  text-align: center;
+  padding: 30px;
+}
+
+.page .pageNo {
+  text-align: center;
+  text-decoration: none;
+  padding: 5px;
+  padding-left: 7px;
+  border-radius: 0px;
+  border-width: 1px;
+  margin: 10px;
+}
+
 @media all and (max-width: 767px) {
   .breadcrumbs {
     margin-top: 40px;
@@ -983,24 +998,6 @@ header ul li:nth-child(2):after {
 .right .cat .container .catitem .text h3 {
   font-size: 24px;
   font-weight: bold;
-}
-
-.right .cat .page {
-  text-align: center;
-}
-
-.right .cat .page .pageNo {
-  border-width: 1px;
-  border-radius: 0px;
-  padding: 2px;
-  padding-left: 5px;
-  width: 20px;
-  line-height: 1.5em;
-  display: inline-block;
-  text-align: center;
-  margin-left: 5px;
-  margin-right: 5px;
-  text-decoration: none;
 }
 
 .right .map {
