--- a/sass/base/_btn.scss
+++ b/sass/base/_btn.scss
@@ -70,13 +70,27 @@
     }
 }
 
+.page {
+    text-align: center;
+    padding: 30px;
+    .pageNo {
+        text-align: center;
+        text-decoration: none;
+        padding: 5px;
+        padding-left: 7px;
+        border-radius: 0px;
+        border-width: 1px;
+        margin: 10px;
+    }
+}
+
 @include respond-to(small) {
     .breadcrumbs {
         margin-top: 40px;
         margin-bottom: 40px;
         text-align: center;
         a {
-            border:none;
+            border: none;
             padding: 0;
             &:hover {
                 color: #333;
