--- a/css/Cat_ShoppingStore_cart.css
+++ b/css/Cat_ShoppingStore_cart.css
@@ -1,11 +1,11 @@
 body{
     background-color: #eee;
     
-    background-image: url(../img/marble.jpg);
+    /* background-image: url(../img/marble.jpg);
     background-size: cover;
-    background-attachment: fixed;
-   
+    background-attachment: fixed; */
 }
+
 
 @media only screen and (max-width: 768px){
     header{
@@ -21,7 +21,7 @@ body{
 }
 
 .wrapCenter{
-	width: 80%;
+	width: 70%;
 	margin: auto;
 }
 
@@ -49,16 +49,46 @@ h2{
 }
 
 table{
-    margin: 3% auto;
+    margin: 3% auto 0 auto;
 }
 
+.info{
+    background-color: #fff;
+    margin-bottom: 5%;
+}
+
+.info th{
+    width: 30%;
+    padding: 3%;
+}
+
+.info td{
+    width: 45%;
+}
 .itemHead{
-    border-bottom: 1px solid #333333;
+   
+    margin-top: 0;
+}
+.itemHead td{
+    text-align: center;
+    vertical-align: middle;
+    border-bottom: 2px solid #333;
+}
+
+.itemHead td:nth-child(1){
+    text-align: left;
 }
 
 .confirm{
     text-align: center;
+    margin-top: 5%;
 }
+
+.pay{
+    margin-top: 3%;
+    margin-bottom: 10%;
+}
+
 
 .confirm a{
     text-decoration: none;
@@ -75,6 +105,67 @@ table{
     color: #fff;
 }
 
-#count{
+table{
+  width: 100%;
+}
+
+td img{
+    width: 80%;
+    vertical-align: middle;
+    margin: 10% 0;
+}
+
+p{
+    text-align: left;
+}
+
+.count{
     width: 50px;
 }
+
+.saleCard,.payCard{
+    padding: 4% 10%;
+    border: 3px solid #EAAF88;
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 15px;
+    margin: 5% 15%;
+    text-align: center;
+}
+.select{
+    margin-left: 2%;
+}
+
+.delButton{
+    /* padding: 10%; */
+    border:2px solid #333;
+    border-radius: 100px;
+}
+
+/* @media only screen and (max-width: 768px){
+
+    .itemHead td{
+        display: block;
+    }
+    
+    .tdTitle {
+        display: none;
+    }
+
+    .itemHead:nth-child(1):before{
+        content: '商品';
+    }
+
+    .itemHead:nth-child(2):before{
+        content: '價錢';
+    }
+
+    .itemHead:nth-child(3):before{
+        content: '數量';
+    }
+
+    .itemHead:nth-child(4):before{
+        content: '刪除';
+    }
+
+    
+} */
