--- a/css/Cat_ShoppingStore_food.css
+++ b/css/Cat_ShoppingStore_food.css
@@ -117,16 +117,19 @@ h2{
 
 .product{
 	float: left;
-	width: 20%;
+	width: 30%;
 	background-color: #fff;
-	margin-top: 1%;
+	margin: 1.66666%;
 	text-align: center;
 	margin-bottom: 4%;
+	padding-bottom: 8%;
+	/* border: #333 3px solid; */
 }
 
 @media only screen and (max-width: 768px){
 	.product{
-		width: 50%;
+		width: 40%;
+		margin: 5%;
 	}
 
 	.title span{
@@ -158,5 +161,22 @@ h2{
 }
 
 .cost{
-	height: 50px;
+	height: 75px;
+}
+
+.addButton{
+    border-radius: 100px;
+    cursor: pointer;
+	letter-spacing: 3px;
+	padding: 2% 8% 2% 10%;
+    border: 2px solid #333333;
+	background-color: transparent;
+	color: #333;
+}
+
+.addButton:hover{
+	
+	background-color: #EAAF88;
+	border: 1px solid #EAAF88;
+	color: #fff;
 }
