--- a/sass/modules/_halfMem.scss
+++ b/sass/modules/_halfMem.scss
@@ -205,6 +205,9 @@
                     border: 2px solid #ccc;
                     padding: 20px;
                     text-align: center;
+                    .defaultBtn{
+                        font-size: 12px;
+                    }
                     .circle {
                         color: dodgerblue;
                         label {
