--- a/sass/halfway_house_search.scss
+++ b/sass/halfway_house_search.scss
@@ -11,6 +11,7 @@
 @import 'modules/_header.scss';
 @import 'modules/_footer.scss';
 @import 'modules/_btns.scss';
+@import 'modules/_signIn.scss';
 @import 'modules/_halfway_house_search.scss';
 @import 'respond/_halfwayHouseSearchMedium.scss';
 @import 'respond/_halfwayHouseSearchSmall.scss';
