--- a/sass/modules/_halfway_house_search.scss
+++ b/sass/modules/_halfway_house_search.scss
@@ -69,7 +69,7 @@
     }
     form {
         text-align: right;
-        #btn {
+        .more {
             display: inline-block;
             border-style: none;
             margin-right: 20px;
