--- a/sass/modules/_halfMem.scss
+++ b/sass/modules/_halfMem.scss
@@ -174,7 +174,7 @@
                 }
             }
         }
-        .halfMemAdobtRecord {
+        .halfMemAdoptRecord {
             table {
                 width: 100%;
                 th {
