--- a/sass/base/_var.scss
+++ b/sass/base/_var.scss
@@ -82,5 +82,5 @@ $gap: 15px;
 //header nav
 $navColor: #eaaf88;
 $navFontColor: #fff;
-$navBackColor :rgb(194, 234, 235);
+$navBackColor :rgba(112, 228, 230, 0.85);
 $navBackFontColor: #fff;
